# OCR-Analysis-API

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
envs/: .env.template
ocr_analysis/: config.py  main.py
ocr_analysis/api/: routers.py
ocr_analysis/cache/: cache_manager.py  redis_config.py
ocr_analysis/utils/: get_extract_data.py  process_image.py
ocr_analysis/validation/: valid_credit_card.py  valid_domain.py  valid_email.py  valid_hash.py  valid_id.py  valid_phone_number.py  valid_plate.py  valid_url.py
