[tool.poetry]
name = "ocr-analysis"
version = "0.1.0"
description = "optical character analysis"
authors = ["Hüseyin Adıgüzel"]
readme = "README.md"
packages = [{include = "ocr_analysis"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.101.1"
isort = "^5.12.0"
black = "^23.7.0"
pytesseract = "^0.3.10"
uvicorn = "^0.23.2"
python-multipart = "^0.0.6"
redis = "^5.0.0"
email-validator = "^2.0.0.post2"
requests = "^2.31.0"
httpx = "^0.24.1"
dynaconf = "^3.2.1"
whois = "^0.9.27"
phonenumbers = "^8.13.19"
validators = "^0.21.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
